--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: The data tracer project aims at identifying metadata using machine learni
 email: info@email.com
 description: > # this means to ignore newlines until "baseurl:"
   The data tracer project aims at identifying metadata using machine learning. Where did the data come from, where did it go, what transforms happened, types, connections, are all what we aspire to identify.
-# baseurl: "opensource" # the subpath of your site, e.g. /blog/
+baseurl: "opensource" # the subpath of your site, e.g. /blog/
 # url: "https://data-dev.github.io/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
