--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-name: Data Tracer
-title: The data tracer project aims at identifying metadata using machine learning
+name: DAI Lab Open Source
+title: DAI Lab Open Source Libraries
 email: info@email.com
 description: > # this means to ignore newlines until "baseurl:"
-  The data tracer project aims at identifying metadata using machine learning. Where did the data come from, where did it go, what transforms happened, types, connections, are all what we aspire to identify.
+  DAI Lab Open Source Libraries
 baseurl: "opensource" # the subpath of your site, e.g. /blog/
 url: "https://dai-lab.github.io/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
