--- a/_data/open-sources-libs.yaml
+++ b/_data/open-sources-libs.yaml
@@ -9,7 +9,7 @@
   Text_in_it: "Synthetic Data Generation for tabular, relational, time series data."
   website: sdv.dev/sdv
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://sdv.dev/SDV/"
   downloads: 
   Level: 
@@ -36,7 +36,7 @@
   Text_in_it: "A library to model multivariate data using copulas."
   website: sdv.dev/copulas/
   Stackoverflow: 
-  slack_link: 
+  slack_link: "https://sdv-space.slack.com/join/shared_invite/zt-gdsfcb5w-0QQpFMVoyB2Yd6SRiMplcw#/"
   docs_link: "https://sdv.dev/Copulas/"
   downloads: 
   Level: 
@@ -63,7 +63,7 @@
   Text_in_it: "A library of Reversible Data Transforms."
   website: 
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: 
   downloads: 
   Level: 
@@ -90,7 +90,7 @@
   Text_in_it: "Conditional GAN for generating synthetic tabular data."
   website: 
   Stackoverflow: 
-  slack_link: 
+  slack_link: "https://sdv-space.slack.com/join/shared_invite/zt-gdsfcb5w-0QQpFMVoyB2Yd6SRiMplcw#/"
   docs_link: "https://sdv.dev/SDV/"
   downloads: 
   Level: 
@@ -117,7 +117,7 @@
   Text_in_it: "Synthetic Data Generation Python library for mixed-type, multivariate time series."
   website: 
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: 
   downloads: 
   Level: 
@@ -144,7 +144,7 @@
   Text_in_it: "Generative adversarial training for generating synthetic tabular data. "
   website: 
   Stackoverflow: 
-  slack_link: 
+  slack_link: "https://sdv-space.slack.com/join/shared_invite/zt-gdsfcb5w-0QQpFMVoyB2Yd6SRiMplcw#/"
   docs_link: 
   downloads: 
   Level: 
@@ -171,7 +171,7 @@
   Text_in_it: "Data Lineage Tracing Library."
   website: 
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: 
   downloads: 
   Level: 
@@ -194,7 +194,7 @@
   Text_in_it: "This project formalizes a way to describe the multi entity, multi table, spatio temporal datasets."
   website: https://data-dev.github.io/MetaData/
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://data-dev.github.io/MetaData/"
   downloads: 
   Level: 
@@ -221,7 +221,7 @@
   Text_in_it: "A simple, extensible library for developing AutoML systems."
   website: https://hdi-project.github.io/BTB/
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://mlbazaar.github.io/BTB/"
   downloads: 
   Level: 
@@ -248,7 +248,7 @@
   Text_in_it: "A library for composing end-to-end tunable machine learning pipelines. "
   website: https://hdi-project.github.io/MLBlocks/
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://mlbazaar.github.io/MLBlocks/"
   downloads: 
   Level: 
@@ -275,7 +275,7 @@
   Text_in_it: "Primitives for machine learning and data science."
   website: https://hdi-project.github.io/MLPrimitives/
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://mlbazaar.github.io/MLPrimitives/"
   downloads: 
   Level: 
@@ -298,7 +298,7 @@
   Text_in_it: "A machine learning library for detecting anomalies in signals. "
   website: https://signals-dev.github.io/Orion/
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://signals-dev.github.io/Orion/"
   downloads: 
   Level: 
@@ -321,7 +321,7 @@
   Text_in_it: "AutoBazaar: An AutoML System from the Machine Learning Bazaar."
   website: https://hdi-project.github.io/AutoBazaar/
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://mlbazaar.github.io/AutoBazaar/"
   downloads: 
   Level: 
@@ -348,7 +348,7 @@
   Text_in_it: "AutoML for Renewable Energy Industries."
   website: https://signals-dev.github.io/GreenGuard/
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://signals-dev.github.io/GreenGuard/"
   downloads: 
   Level: 
@@ -371,7 +371,7 @@
   Text_in_it: "An open source automl library for using machine learning in healthcare. "
   website: 
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://dai-lab.github.io/Cardea/"
   downloads: 
   Level: 
@@ -398,7 +398,7 @@
   Text_in_it: "Auto Tune Models - A multi-tenant, multi-data system for automated machine learning. "
   website: https://hdi-project.github.io/ATM/
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://hdi-project.github.io/ATM/"
   downloads: 
   Level: 
@@ -425,7 +425,7 @@
   Text_in_it: "Metrics to evaluate quality and efficacy of synthetic datasets."
   website: 
   Stackoverflow: 
-  slack_link: 
+  slack_link: "https://sdv-space.slack.com/join/shared_invite/zt-gdsfcb5w-0QQpFMVoyB2Yd6SRiMplcw#/"
   docs_link: "https://sdv.dev/SDV/"
   downloads: 
   Level: 
@@ -452,7 +452,7 @@
   Text_in_it: "Benchmarking synthetic data generation methods."
   website: 
   Stackoverflow: 
-  slack_link: 
+  slack_link: "https://sdv-space.slack.com/join/shared_invite/zt-gdsfcb5w-0QQpFMVoyB2Yd6SRiMplcw#/"
   docs_link: "https://sdv.dev/SDV/"
   downloads: 
   Level: 
@@ -479,7 +479,7 @@
   Text_in_it: "Augmenting relational datasets by generating derived columns with known lineage."
   website: https://data-dev.github.io/DataReactor/
   Stackoverflow: 
-  slack_link: 
+  slack_link: ''
   docs_link: "https://data-dev.github.io/DataReactor/"
   downloads: 
   Level: 
